--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 .App {
-    border: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+  border: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
 }
